--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-carousel-minimal": "^1.4.1",
     "react-day-and-night-toggle": "^1.0.18",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
